BLOG-18: Fixed a few layout issues.

--- a/docroot/themes/custom/blog/sass/components/blog/_blog-teaser.scss
+++ b/docroot/themes/custom/blog/sass/components/blog/_blog-teaser.scss
@@ -4,6 +4,12 @@
 
 .block-views-blockblog-block-homepage {
   @include layout();
+
+  margin: 3rem auto 0;
+
+  > h2 {
+    text-align: center;
+  }
 }
 
 .view-id-blog {
