--- a/docroot/themes/custom/blog/sass/components/navigation/_hamburger-menu.scss
+++ b/docroot/themes/custom/blog/sass/components/navigation/_hamburger-menu.scss
@@ -38,7 +38,7 @@
   }
 
   &.open .hamburger-menu__toggle-line {
-    background: $off-white;
+    background: $orange;
   }
 }
 
@@ -115,7 +115,7 @@
     a,
     a.is-active {
       position: relative;
-      color: $off-white;
+      color: $orange;
       text-transform: uppercase;
       letter-spacing: 2px;
       font-weight: bold;
@@ -146,7 +146,7 @@
         height: 100%;
         top: 0;
         right: 0;
-        background: $off-white;
+        background: $orange;
         transition: width 0.3s;
 
         @include breakpoint($medium) {
